fix: set pointer-events instead of visibility hidden

--- a/src/sass/datepicker.scss
+++ b/src/sass/datepicker.scss
@@ -25,7 +25,7 @@
   color: map_get($datepickerTextColor, common);
   width: $datepickerWidth;
   position: absolute;
-  visibility: hidden;
+  pointer-events: none;
   opacity: 0;
   transition: opacity $datepickerTransitionSpeed $datepickerTransitionEase, transform $datepickerTransitionSpeed $datepickerTransitionEase;
   z-index: $datepickerZIndex;
@@ -47,7 +47,7 @@
   &.active {
     opacity: 1;
     transform: translate(0);
-	visibility: visible;
+    pointer-events: auto;
   }
 }
 
